# EmpregosSayajinBot

./: README.md  app.js  app.py  package-lock.json  package.json  pyproject.toml  serverless.yml
modules/telegram/: telegram_integration.py
modules/vagas/: vagas_scrapping.py
